# spotifai

./: LICENSE  README.md  pyproject.toml
experiments/example/: config.json
src/spotifai/: main.py
src/spotifai/audio/: audio_processor.py
src/spotifai/database/: music_database.py  schema.sql
src/spotifai/database/commands/: read.py
src/spotifai/maching_learning/: buffer.py  loss.py  model.py  persistence.py  playlist_dataset.py  train.py
